# tui

./: .gitignore  README.md  build.bat  main.py  pyproject.toml  tui.py
.serena/: project.yml
hello_tui/: run.bat
hello_tui/scripts/: build.bat
hello_tui/src/: __init__.py  hello_tui.py
src/: __init__.py  chatty_patty.py  config.py  profile_setup.py  users_discovery.py  utils.py
test/: test_server.py
